crates/zizmor/tests/integration/snapshots/integration__snapshot__template_injection.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"template-injection/template-injection-static-matrix.yml\")).args([\"--persona=auditor\"]).run()?"
---
error[template-injection]: code injection via template expansion
  --> @@INPUT@@:21:36
   |
20 |         run: |
   |         --- this run block
21 |           echo "issue created: ${{ matrix.frob }}"
   |                                    ^^^^^^^^^^^ may expand into attacker-controllable code
   |
   = note: audit confidence → Unknown

1 finding: 1 unknown, 0 informational, 0 low, 0 medium, 0 high
